end of day push

--- a/src/components/ClientInterface.css
+++ b/src/components/ClientInterface.css
@@ -213,7 +213,7 @@
   }
   
   .book-btn {
-    background-color: var(--primary-color);
+    background-color:#101e22;
     color: white;
     padding: 0.875rem 1.25rem;
     border: none;
